# sync-yt

./: LICENSE  README.md  pyproject.toml  rc.json  requirements.txt  sync_yt.py
src/sync_yt/: __init__.py  __main__.py  sync_yt.py
